--- a/styles/styles.css
+++ b/styles/styles.css
@@ -193,6 +193,7 @@ span{
   font-size: 1.1rem;
   font-weight: bold;
   cursor: pointer;
+      text-align: center;
 }
 .first-button:hover{
   background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
@@ -321,6 +322,7 @@ margin-bottom: 3%;
   font-size: 1.1rem;
   font-weight: bold;
   cursor: pointer;
+      text-align: center;
 }
 .second-button:hover{
   background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
