--- a/styles/styles.css
+++ b/styles/styles.css
@@ -312,6 +312,7 @@ margin-bottom: 3%;
   padding:5% 5% 5%;
 }
 .second-button{
+    margin:auto;
   background-color: #01f3bb;
   width: 330px;
   padding: 10px;
